deployments/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: eventengine-sa
      containers:
        - name: backend
          image: 961341558131.dkr.ecr.us-west-2.amazonaws.com/eventengine/backend:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz/status
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz/status
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      name: http
      targetPort: 80
  type: LoadBalancer
